update file with link to home

--- a/views/community.html
+++ b/views/community.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">goodbedford.com</a>
+            <a class="navbar-brand" href="../index.html">goodbedford.com</a>
         </div>
         <div>
             <ul class="nav navbar-nav">
@@ -31,12 +31,24 @@
     </div>
 </nav>
     <div class="container-fluid">
-       
+       <div>
+        <h3>Node School SF</h3>
+        <p>I have been attending and contribuiting to Node School SF for a year. I truly enjoy the organizers and attendees at this open source
+           project. It has been my pleasure to be a contributor.
+        </p>
+        <a href="http://nodeschool.io/sanfrancisco/">Node School SF</a>
+       </div>
+        <h3>General Assembly</h3>
+        <p>I am a GA alumni and participate in most of their many activies. Whether it is helping with evangalising about the program,
+           going to meet and greets, or quartley parties you can find me there.
+        </p>
+        <a href="https://generalassemb.ly/">General Assembly</a>
+       </div>  
     </div>
 
 
-<script src="../js/bootstrap.js"></script>
 <script src="../js/jquery-2.1.4.js"></script>
+<script src="../js/bootstrap.js"></script>
 <script src="../js/script.js"></script>
 
 </body>
