--- a/views/projects.html
+++ b/views/projects.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">goodbedford.com</a>
+        <a class="navbar-brand" href="../index.html">goodbedford.com</a>
       </div>
       <div>
         <ul class="nav navbar-nav">
@@ -69,7 +69,7 @@
           </div>
           <div class="row">
             <ul class="project-li">
-              <li>Restful API for social shoe shopping. The idea is there are a lot of people with a shoe size 1/2 size smaller than the other. This is the solution. Users are able to browse this shoe catelog and find matching users with the opposite foot size. From there they can message each other and began to buy shoes together.<em>Still in Development</em>
+              <li>Restful API for social shoe shopping. The idea is there are a lot of people with a shoe size 1/2 size smaller than the other. This is the solution. Users are able to browse this shoe catelog and find matching users with the opposite foot size. From there they can message each other and began to buy shoes together.<br><em>Still in Development</em>
               </li>
               <li><a href="https://solemate-demo.herokuapp.com/" class="project-link">https://solemate-demo.herokuapp.com/</a></li>
               <li>Stack:</li>
