--- a/views/community.html
+++ b/views/community.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <ul class="nav navbar-nav">
-                <li class=""><a href="../index.html">blog</a></li>
+                <li class=""><a href="../index.html">Blog</a></li>
                 <li class=""><a href="https://github.com/goodbedford">github</a></li>
                 <li class=""><a href="https://www.linkedin.com/in/goodbedford">Linkedin</a></li>
                 <li class=""><a href="projects.html">Projects</a></li>
