--- a/views/projects.html
+++ b/views/projects.html
@@ -41,7 +41,7 @@
         <div class="col-sm-4 project-container">
           <div class="row media">
             <div class="media-left">
-              <a href="h​ttp://www.ootd-demo.herokuapp.com/" class="project-link">
+              <a href="http://ootd-demo.herokuapp.com/" class="project-link">
                 <img src="../img/projects/ootd/ootd-screenshot.jpg" alt="logo image" class="project-img media-object">
                 <div class="project-title">#OOTD</div>
               </a>
@@ -51,7 +51,7 @@
             <ul class="project-li">
               <li>Mobile first application that has RESTful API built with Javascript, Node and Express. Demonstrates ability to use third-party APIs (Instragram) and NoSQL database (Mongo DB) and have favorite button feature.
               </li>
-              <li><a href="h​ttp://www.ootd-demo.herokuapp.com" class="project-link"> h​ttps://ootd-demo.herokuapp.com/</a></li>
+              <li><a href="http://ootd-demo.herokuapp.com/" class="project-link">h​ttps://ootd-demo.herokuapp.com/</a></li>
               <li>Stack:</li>
               <li>html, css, javascript, node, express, ejs, jquery, mongo, mongoose, instagram api, heroku</li>
             </ul>
@@ -80,7 +80,7 @@
         <!-- project  atcon -->
         <div class="col-sm-4 project-container">
           <div class="row media">
-            <a href="" class="project-link">
+            <a href="https://atcon.herokuapp.com/" class="project-link">
               <div class="media-left">
                 <img src="../img/projects/atcon/atCon-screenshot.jpg" alt="logo image" class="project-img media-object">
                 <div class="project-title">atCon</div>
